# blockchain-api

./: .dockerignore  .env.example  .env.terraform.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .terraformignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SUPPORTED_CHAINS.md  SUPPORTED_CHAINS.md.  build.rs  deny.toml  docker-compose.mock-bundler.yaml  docker-compose.yaml  funding.json  justfile  package.json  rustfmt.toml
.github/: codeowners  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: cd.yaml  ci.yaml  ci_terraform.yaml  claude-auto-review.yml  claude-security-review.yml  cta.yml  dispatch_deploy.yml  dispatch_publish.yml  dispatch_validate.yml  event_intake.yml  event_pr.yml  event_release.yml  intake.yaml  intake.yml  issues.yaml  sub-cd.yml  sub-providers.yml  sub-validate.yml  sub-yttrium-integration.yml  validate.yaml  xanitizer.yml
assets/: names_dictionary.txt
integration/: balance.test.ts  bundler.test.ts  chain_orchestrator.test.ts  convert.test.ts  exchanges.test.ts  fungible_price.test.ts  generators.test.ts  health.test.ts  history.test.ts  identity.test.ts  init.ts  integration.test.ts  jestconfig.integration.json  middlewares.test.ts  names.test.ts  onramp.test.ts  portfolio.test.ts  pos.test.ts  proxy.test.ts  ratelimiting.test.ts  sessions.test.ts  supported-chains.test.ts
integration/types/: pos.ts
migrations/: 20231209213851_init-names.sql  20231209213904_init-addresses.sql  20250911093958_init-exchange_reconciliation_ledger.sql  20250911093958_init-exchange_transactions.sql  README.md
signatures/version1/: cta.json
src/: chain_config.rs  env.rs  error.rs  lib.rs  main.rs  metrics.rs  server.rs  state.rs  test_helpers.rs  ws.rs  yaml.rs
src/analytics/: account_names_info.rs  balance_lookup_info.rs  chain_abstraction_info.rs  config.rs  exchange_event_info.rs  history_lookup_info.rs  identity_info.rs  identity_lookup_info.rs  message_info.rs  mod.rs  onramp_history_lookup_info.rs  pos_info.rs
src/database/: config.rs  error.rs  exchange_reconciliation.rs  exchange_transactions.rs  helpers.rs  mod.rs  types.rs  utils.rs
src/debug/: alloc.rs  mod.rs  profiler.rs
src/env/: allnodes.rs  arbitrum.rs  aurora.rs  base.rs  berachain.rs  binance.rs  blast.rs  callstatic.rs  deinfra.rs  drpc.rs  dune.rs  edexa.rs  etherlink.rs  generic.rs  getblock.rs  hiro.rs  infura.rs  katana.rs  lava.rs  mantle.rs  mod.rs  monad.rs  moonbeam.rs  morph.rs  near.rs  odyssey.rs  omnia.rs  onerpc.rs  pokt.rs  publicnode.rs  quicknode.rs  rootstock.rs  server.rs  solscan.rs  sui.rs  syndica.rs  tenderly.rs  therpc.rs  toncenter.rs  trongrid.rs  (+7 more)
src/extractors/: method.rs  mod.rs  protocol.rs
src/handlers/: balance.rs  bundler.rs  fungible_price.rs  health.rs  history.rs  identity.rs  metrics.rs  mod.rs  portfolio.rs  proxy.rs  self_provider.rs  supported_chains.rs  ws_proxy.rs
src/handlers/chain_agnostic/: assets.rs  check.rs  lifi.rs  mod.rs  nonce_manager.rs  route.rs  status.rs
src/handlers/convert/: allowance.rs  approve.rs  gas_price.rs  mod.rs  quotes.rs  tokens.rs  transaction.rs
src/handlers/generators/: mod.rs  onrampurl.rs
src/handlers/json_rpc/: get_assets.rs  handler.rs  mod.rs  prepare_calls.rs
src/handlers/onramp/: mod.rs  multi_quotes.rs  options.rs  properties.rs  providers.rs  quotes.rs  widget.rs
src/handlers/profile/: address.rs  attributes.rs  lookup.rs  mod.rs  register.rs  reverse.rs  suggestions.rs  utils.rs
src/handlers/sessions/: context.rs  cosign.rs  create.rs  get.rs  list.rs  mod.rs  revoke.rs
src/handlers/wallet/: call_id.rs  exchanges.rs  get_assets.rs  get_calls_status.rs  get_exchange_buy_status.rs  (+6 more)
src/json_rpc/: mod.rs  tests.rs
src/names/: mod.rs  suggestions.rs  utils.rs
src/profiler/: mod.rs
src/project/: config.rs  error.rs  mod.rs
src/providers/: allnodes.rs  arbitrum.rs  aurora.rs  base.rs  berachain.rs  binance.rs  blast.rs  bungee.rs  callstatic.rs  coinbase.rs  deinfra.rs  drpc.rs  dune.rs  edexa.rs  etherlink.rs  generic.rs  getblock.rs  hiro.rs  infura.rs  katana.rs  lava.rs  lifi.rs  mantle.rs  meld.rs  mock_alto.rs  mod.rs  monad.rs  moonbeam.rs  morph.rs  near.rs  odyssey.rs  omnia.rs  one_inch.rs  onerpc.rs  pimlico.rs  pokt.rs  publicnode.rs  quicknode.rs  rootstock.rs  solscan.rs  (+14 more)
src/storage/: error.rs  mod.rs
src/utils/: batch_json_rpc_request.rs  build.rs  cors.rs  crypto.rs  erc4337.rs  erc7677.rs  json_rpc_cache.rs  mod.rs  network.rs  permissions.rs  rate_limit.rs  self_transport.rs  sessions.rs  simple_request_json.rs  token_amount.rs  validators.rs
terraform/: .terraform-docs.yml  .terraform.lock.hcl  .tflint.hcl  README.md  analytics.tf  backend.tf  context.tf  deploy-dev.sh  inputs.tf  main.tf  moved.tf  provider.tf  providers.tf  res_dns.tf  res_ecr.tf  res_ecs.tf  res_monitoring.tf  res_network.tf  res_postgres.tf  terraform.tf  variables.tf
terraform/alerting/: alarms_redis.tf  variables.tf
terraform/ecs/: README.md  analytics.tf  cluster.tf  cluster_autoscaling.tf  cluster_iam.tf  cluster_logs.tf  dns.tf  iam.tf  main.tf  network.tf  outputs.tf  terraform.tf  variables.tf
terraform/logging/: main.tf  outputs.tf
terraform/monitoring/: README.md  chain_config.json  dashboard.jsonnet  dashboard.tf  data_sources.tf  main.tf  outputs.tf  terraform.tf  variables.tf
terraform/postgres/: main.tf  outputs.tf  password.tf  variables.tf
terraform/private_zone/: main.tf  outputs.tf  variables.tf
terraform/redis/: context.tf  main.tf  outputs.tf  variables.tf
terraform/region/: inputs.tf  main.tf  output.tf  res_alerting.tf  res_db.tf  res_db_peering.tf  res_dns.tf  res_ecs.tf  res_network.tf  res_redis.tf  terraform.tf  variables.tf
terraform/vars/: dev.tfvars  prod.tfvars  staging.tfvars
tests/: integration.rs
tests/context/: mod.rs  server.rs
tests/functional/: README.md  bundler.rs  database.rs  metrics.rs  mod.rs  sessions.rs
tests/utils/: mod.rs
worker/: Cargo.toml  wrangler.toml
worker/src/: active_config.rs  config.rs  lib.rs
(+193 files in other folders)
