[package]
name = "rpc-proxy"
version = "0.58.0"
edition = "2021"
authors = [
    "Derek <derek@walletconnect.com>",
    "Raku <maciejrak@walletconnect.com"
]
build = "build.rs"

[dependencies]
wc = { git = "https://github.com/WalletConnect/utils-rs.git", tag = "v0.9.0", features = ["alloc", "analytics", "future", "http", "metrics", "geoip", "geoblock", "rate_limit"] }

# Async
async-trait = "0.1.57"
tokio = { version = "1", features = ["full"] }

# Web
hyper = "0.14.4"
hyper-tls = "0.5.0"
tap = "1.0"
axum = { version = "0.6", features = ["json", "tokio", "ws"] }
tower = "0.4.11"
tower-http = { version = "0.4.0", features = ["cors", "trace", "request-id", "util"] }
jsonrpc = "0.14.0"
async-tungstenite = { version = "0.20.0", features = ["tokio", "tokio-runtime", "tokio-native-tls"] }
url = "2.5"
reqwest = { version= "0.11", features = ["deflate", "brotli", "gzip"] }

# Serialization
rmp-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_piecewise_default = "0.2"
serde-aux = "3.1"
validator = { version = "0.16", features = ["derive"] }
num_enum = "0.7"
strum = "0.26"
strum_macros = "0.26"

# Storage
aws-config = "1.1"
aws-sdk-s3 = "1.13"
deadpool-redis = "0.14"
moka = "0.12"
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }

dotenv = "0.15.0"
envy = "0.4"

anyhow = "1"
thiserror = "1.0"
derive_more = "0.99"
once_cell = "1.15"

ipnet = "2.5"
pnet_datalink = "0.31"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "ansi"] }

cerberus = { git = "https://github.com/WalletConnect/cerberus.git", tag = "v0.10.0" }
parquet = { git = "https://github.com/WalletConnect/arrow-rs.git", rev = "99a1cc3", default-features = false, features = ["flate2"] }
parquet_derive = { git = "https://github.com/WalletConnect/arrow-rs.git", rev = "99a1cc3" }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3.28"
tokio-stream = "0.1.12"
axum-tungstenite = "0.2.0"

rand = "0.8.4"
prometheus-http-query = "0.6.6"
ethers = { version = "2.0.11", git = "https://github.com/gakonst/ethers-rs" } # using Git version because crates.io version fails clippy

bytes = "1.4.0"
regex = "1.10"
sha256 = "1.2.2"

# System CPU and Memory metrics
sysinfo = "0.30"

[dev-dependencies]
jsonrpc = "0.14.0"
test-context = "0.1"

[build-dependencies]
vergen = { version = "6", default-features = false, features = ["build", "cargo", "git"] }

[features]
test-localhost = []

[profile.release-debug]
inherits = "release"
lto = "thin"
debug = 1
