[package]
name = "rpc-proxy"
version = "0.113.0"
edition = "2021"
authors = [
    "Derek <derek@walletconnect.com>",
    "Raku <maciejrak@walletconnect.com>",
    "Chris <chris@walletconnect.com>",
    "Max <max@walletconnect.com>"
]
build = "build.rs"

[dependencies]
wc = { git = "https://github.com/WalletConnect/utils-rs.git", tag = "v0.9.0", features = ["alloc", "analytics", "future", "http", "metrics", "geoip", "geoblock", "rate_limit"] }
relay_rpc = { git = "https://github.com/WalletConnect/WalletConnectRust.git", tag = "v0.32.0", features = ["cacao"] }
yttrium = { git = "https://github.com/reown-com/yttrium.git", branch = "fix/support-get-calls-status" }

# Async
async-trait = "0.1.82"
tokio = { version = "1", features = ["full"] }

# Web
hyper = "0.14"
hyper-tls = "0.5.0"
tap = "1.0"
axum = { version = "0.6", features = ["json", "tokio", "ws"] }
tower = "0.4.13"
tower-http = { version = "0.4", features = ["cors", "trace", "request-id", "util"] }
jsonrpc = "0.18.0"
async-tungstenite = { version = "0.20.0", features = ["tokio", "tokio-runtime", "tokio-native-tls"] }
url = "2.5"
reqwest = { version= "0.12", features = ["deflate", "brotli", "gzip"] }

# Serialization
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_piecewise_default = "0.2"
serde-aux = "3.1"
validator = { version = "0.16", features = ["derive"] }
num_enum = "0.7"
strum = "0.26"
strum_macros = "0.26"
hex = "0.4"

# Storage
aws-config = "1.1"
aws-sdk-s3 = "1.13"
deadpool-redis = "0.14"
moka = "0.12"
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }

# IRN
irn_api = { package = "irn_api", path = "irn/crates/irn_api", features = ["client"] }
irn_rpc = { package = "irn_rpc", path = "irn/crates/rpc"}

dotenv = "0.15.0"
envy = "0.4"

anyhow = "1"
thiserror = "1.0"
derive_more = "1.0.0"
once_cell = "1.15"

ipnet = "2.5"
pnet_datalink = "0.31"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "ansi"] }

cerberus = { git = "https://github.com/WalletConnect/cerberus.git", tag = "v0.13.1" }
parquet = { git = "https://github.com/WalletConnect/arrow-rs.git", rev = "99a1cc3", default-features = false, features = ["flate2"] }
parquet_derive = { git = "https://github.com/WalletConnect/arrow-rs.git", rev = "99a1cc3" }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3.30"
tokio-stream = "0.1.12"
axum-tungstenite = "0.2.0"

rand = "0.8.5"
rand_core = "0.6"
prometheus-http-query = "0.6.6"
ethers = { version = "2.0.11", git = "https://github.com/gakonst/ethers-rs" } # using Git version because crates.io version fails clippy
alloy = { version = "0.3.6", features = ["providers"] }

bytes = "1.7.1"
data-encoding = "2.6.0"
base64 = "0.22"
bs58 = "0.5"
regex = "1.10"
sha256 = "1.5"
uuid = { version = "1.10", features = ["serde"] }

# System CPU and Memory metrics
sysinfo = "0.30"
eyre = "0.6.12"
fastlz-rs = "0.0.3"

[dev-dependencies]
jsonrpc = "0.18.0"
test-context = "0.1"

[build-dependencies]
vergen = { version = "6", default-features = false, features = ["build", "cargo", "git"] }

[features]
full = []
test-localhost = []
test-mock-bundler = []

[profile.release-debug]
inherits = "release"
lto = "thin"
debug = 1

# [patch.'https://github.com/reown-com/yttrium.git']
# yttrium = { path = "../yttrium/crates/yttrium" }
